update password current user , swagger update
