# src/routes/auth.router.ts
@@ -7,10 +7,10 @@ authRouter.post('/signup', authController.signup);
 
 authRouter.post('/signin', authController.signin);
 
+authRouter.patch('/update-password', authController.protect, authController.updatePassword);
+
 authRouter.post('/forgot-password', authController.forgotPassword);
 
 authRouter.patch('/reset-password/:token', authController.resetPassword);
-
-// authRouter.get('/', authController.getAll);
 
 export { authRouter };
